Zad2 dodano tabelki

--- a/Zadanie2.tex
+++ b/Zadanie2.tex
@@ -4,6 +4,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[MeX]{polski}
 
+
 \title{Zadanie2}
 \author{Michał Kopczewski}
 \date{February 2023}
@@ -75,11 +76,12 @@ od września 2001 & sobota, niedziela i święta 14.00[b]\\
 
 \large{\textbf{Tutaj koniec merytoryki, Lorem Ipsum Wita!}}\\
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fringilla libero in leo feugiat, sed gravida purus vestibulum. Donec in 
-convallis ante, ut dictum tortor. Nullam pharetra bibendum lorem, sed venenatis massa feugiat at. Cras fringilla velit a blandit 
-vehicula. Vivamus elit nulla, dignissim vitae condimentum at, dignissim eu tellus. Aliquam venenatis arcu quis eleifend iaculis. Morbi 
-vitae rutrum velit. Aenean blandit lectus sagittis, tincidunt lorem et, sodales lacus. Aliquam erat volutpat. Sed rutrum lobortis velit, 
-et porta dui volutpat eget. Donec sed tortor felis. In in pretium turpis.
-
+convallis ante, ut dictum tortor.
+\begin{itemize}
+    \item Morbi ut facilisis eros, tempus mattis erat. Ut nec nunc mauris.
+    \item Suspendisse sollicitudin diam at ligula mattis.
+    \item Pellentesque efficitur euismod sagittis.
+\end{itemize}
 \end{frame}
 \begin{frame}{Tekst i fotka}
 
@@ -98,9 +100,14 @@ Duis nec lacus malesuada, ullamcorper neque non, tristique libero. Sed sollicitu
 \end{frame}
 \begin{frame}
 
-Morbi in pellentesque felis. Nulla tempus, ex a blandit commodo, libero nibh dapibus orci, a tristique augue risus a enim. Integer 
-libero sem, congue vulputate ullamcorper nec, dignissim id ipsum. Vestibulum vehicula libero eu elit consectetur, non fringilla arcu 
-gravida. Fusce a nunc ac ante pellentesque ultricies in convallis elit. 
+\begin{enumerate}
+\item Nam suscipit augue ut mollis scelerisque.
+\item Praesent purus mi, tempus eget rutrum ac, lacinia sit amet leo.
+\item Phasellus porta neque nec mollis aliquam. 
+\end{enumerate}
+\textsc{Sed lobortis ante eget est vulputate, eu tincidunt ipsum maximus. Quisque velit velit, porta sit amet venenatis vitae, ultricies 
+nec ipsum.}
+
 \end{frame}
 \begin{frame}
 
@@ -112,21 +119,26 @@ gravida. Fusce a nunc ac ante pellentesque ultricies in convallis elit.
 \begin{minipage}{0.66\textwidth}
 \centering
 \textit{Lorem Ipsum} – Suspendisse et congue dolor. Vivamus eget rutrum elit. Mauris ut metus et urna ullamcorper pretium mollis in 
-neque. Nunc vitae dui ex. Etiam ut consequat mauris. Nulla dolor ante, auctor eget cursus quis, interdum quis massa. Integer scelerisque 
-hendrerit mi. Donec ornare, ante eget consectetur mattis, lacus nibh porttitor nisi, vel viverra neque dui eget nisl. Fusce ultricies, 
-metus et dignissim faucibus, dui erat eleifend nisl, vel imperdiet tellus lacus et diam.
+neque. Nunc vitae dui ex. Etiam ut consequat mauris. \begin{itemize}
+    \item Morbi ut facilisis eros, tempus mattis erat. Ut nec nunc mauris.
+    \item Suspendisse sollicitudin diam at ligula mattis.
+    \item Pellentesque efficitur euismod sagittis.
+\end{itemize}.
 \end{minipage}
-\end{figure}
 
+\end{figure}
 \end{frame}
-% \begin{frame}
+\begin{frame}
 
 % % \begin{itemize}
+
 % % \item[1.] Kliknij tutaj aby przejść do slajdu 1 \hyperlink{Karol}{\textcolor{blue}{\rule{5mm}{5mm}}}
 % % \item[2.] Kliknij tutaj aby przejść do slajdu 2 \hyperlink{Logo}{\textcolor{blue}{\rule{5mm}{5mm}}}
 % % \end{itemize}
+\framebreak
+\tableofcontent
 
-% \end{frame}
+\end{frame}
 
 \end{document}
 
