--- a/Zadanie2.tex
+++ b/Zadanie2.tex
@@ -51,7 +51,7 @@ weszła do finału, po niebieskiej zawsze drużyna debiutująca. W przypadku, gd
 stanowisku decyduje losowanie.}
 
 \end{frame}
-\begin{frame}
+\begin{frame}[label=tabela]
 
 \resizebox{\textwidth}{!}{
 \begin{center}
@@ -72,7 +72,7 @@ od września 2001 & sobota, niedziela i święta 14.00[b]\\
 }
 
 \end{frame}
-\begin{frame}
+\begin{frame}[label=StartLoremu]
 
 \large{\textbf{Tutaj koniec merytoryki, Lorem Ipsum Wita!}}\\
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fringilla libero in leo feugiat, sed gravida purus vestibulum. Donec in 
@@ -98,7 +98,7 @@ Duis nec lacus malesuada, ullamcorper neque non, tristique libero. Sed sollicitu
 \end{figure}
     
 \end{frame}
-\begin{frame}
+\begin{frame}[label=Listaloremów]
 
 \begin{enumerate}
 \item Nam suscipit augue ut mollis scelerisque.
@@ -109,7 +109,7 @@ Duis nec lacus malesuada, ullamcorper neque non, tristique libero. Sed sollicitu
 nec ipsum.}
 
 \end{frame}
-\begin{frame}
+\begin{frame}[label=TekstLorem]
 
 \begin{figure}[htp]
 \begin{minipage}{0.33\textwidth}
@@ -125,19 +125,25 @@ neque. Nunc vitae dui ex. Etiam ut consequat mauris. \begin{itemize}
     \item Pellentesque efficitur euismod sagittis.
 \end{itemize}.
 \end{minipage}
-
 \end{figure}
+
 \end{frame}
 \begin{frame}
 
-% % \begin{itemize}
-
-% % \item[1.] Kliknij tutaj aby przejść do slajdu 1 \hyperlink{Karol}{\textcolor{blue}{\rule{5mm}{5mm}}}
-% % \item[2.] Kliknij tutaj aby przejść do slajdu 2 \hyperlink{Logo}{\textcolor{blue}{\rule{5mm}{5mm}}}
-% % \end{itemize}
-\framebreak
-\tableofcontent
-
+\textbf{Odwołania do elementów}
+\begin{enumerate}
+\item \hyperlink{Karol}{Karol Strasburger}
+\item \hyperlink{Tabela}{Tabelka godzin emisji familiady}
+\item \hyperlink{StartLoremu}{Tekst Loremu}
+\item \hyperlink{Listaloremów}{Lista numerowana}
+\item \hyperlink{TekstLorem}{Ostatni obrazek}
+\end{enumerate}
+\textbf{Bibliografia}
+\begin{enumerate}
+    \item \hyperlink{https://pl.wikipedia.org/wiki/Familiada}{Wikipedia Familiady} \hyperlink{Odnośnik do foto Strasburgera}{Familiada}
+    \item \hyperlink{https://www.lipsum.com/feed/html}{Generator Lorem} \hyperlink{StartLoremu}{Odnośnik do pierszego slajdu tekstem 
+Lorem Ipsum}
+\end{enumerate}
 \end{frame}
 
 \end{document}
